Kelime Sayfası Eklendi.

--- a/MyTabbedPage1.xaml
+++ b/MyTabbedPage1.xaml
@@ -6,4 +6,5 @@
   <ContentPage Title="Tab 1" />
   <ContentPage Title="Tab 2" />
   <ContentPage Title="Tab 3" />
+  <ContentPage Title="Tab 4" />
 </TabbedPage>
