--- a/MainPage2.xaml
+++ b/MainPage2.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="BrailleUygulamasi.MainPage2" Title="HARF">
+             x:Class="BrailleUygulamasi.MainPage2" Title="HARF" BackgroundColor="White">
     <ContentPage.Padding>
         <OnPlatform x:TypeArguments="Thickness"
                  Android="20, 30, 20, 20">
@@ -12,18 +12,22 @@
 
             <Label Text="Braille Dilinde Görmek istediğiniz Harfi Aşağıdaki Boşluğa Yazınız." 
                        VerticalOptions="Center"
-                       FontSize="17"/>
+                       FontSize="17"
+                   TextColor="Black"/>
 
             <Entry 
                    x:Name="textalani"
-                   TextColor="Gray"
+                   TextColor="Black"
                    BackgroundColor="AliceBlue"
                    Placeholder="Buraya Yazınız! (Max bir karakter!)"
+                   PlaceholderColor="Gray"
                    MaxLength="1"
                    Keyboard="Chat"
                    />
 
             <Button Text="Dönüştürmek için Tıklayınız !"
+                    TextColor="Black"
+                    BackgroundColor="LightGray"
                     HorizontalOptions="Center"
                     CornerRadius="90"
                     Clicked="Button_Clicked"/>
