--- a/MainPage2.xaml
+++ b/MainPage2.xaml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:BrailleUygulamasi"
              x:Class="BrailleUygulamasi.MainPage2" Title="HARF" BackgroundColor="White">
     <ContentPage.Padding>
         <OnPlatform x:TypeArguments="Thickness"
@@ -36,6 +36,9 @@
                    x:Name="brailleimages"
                    HeightRequest="300"
                    VerticalOptions="CenterAndExpand"/>
+
+
+           
 
 
         </StackLayout>
